# dftfe-api

./: README.md
cppapi/: CMakeLists.txt  README.md  apiTest.cc  apiTest2.cc  apiTestSingleNonPeriodicSystemMPI.cc
cppapi/example1/: apiTestSinglePeriodicSystemMPI.cpp  benchmarkOutput  perlmutter.slurm
cppapi/example2/: apiTestTwoPeriodicSystemsMPI.cpp  apiTestTwoSystemsMPI.cpp  benchmarkOutput  perlmutter.slurm
